# clawmark

./: .gitignore  AGENTS.md  CONTRIBUTING.md  Cargo.toml  LICENSE  PLAN.md  README.md
.claude/: CLAUDE.md
.cursor/: gsd-file-manifest.json  gsd-install-state.json  hooks.json
.cursor/agents/: gsd-advisor-researcher.md  gsd-ai-researcher.md  gsd-code-fixer.md  gsd-debug-session-manager.md  gsd-debugger.md  gsd-domain-researcher.md  gsd-eval-auditor.md  gsd-eval-planner.md  gsd-executor.md  gsd-framework-selector.md  gsd-intel-updater.md  gsd-phase-researcher.md  gsd-plan-checker.md  gsd-planner.md  gsd-project-researcher.md  gsd-research-synthesizer.md  gsd-roadmapper.md  gsd-ui-researcher.md  gsd-user-profiler.md  gsd-verifier.md
.cursor/commands/: gsd-add-tests.md  gsd-ai-integration-phase.md  gsd-audit-fix.md  gsd-audit-milestone.md  gsd-audit-uat.md  gsd-autonomous.md  gsd-capture.md  gsd-cleanup.md  gsd-code-review.md  gsd-complete-milestone.md  gsd-config.md  gsd-debug.md  gsd-discuss-phase.md  gsd-docs-update.md  gsd-eval-review.md  gsd-execute-phase.md  gsd-explore.md  gsd-extract-learnings.md  gsd-fast.md  gsd-forensics.md  gsd-graphify.md  gsd-health.md  gsd-help.md  gsd-import.md  gsd-inbox.md  gsd-ingest-docs.md  gsd-manager.md  gsd-map-codebase.md  gsd-milestone-summary.md  gsd-mvp-phase.md  gsd-new-milestone.md  gsd-new-project.md  gsd-pause-work.md  gsd-phase.md  gsd-plan-phase.md  gsd-plan-review-convergence.md  gsd-pr-branch.md  gsd-profile-user.md  gsd-progress.md  gsd-quick.md  (+19 more)
.cursor/gsd-core/references/: artifact-types.md  context-budget.md  edge-probe.md  model-profile-resolution.md  planner-guidance.md  planner-load-graph-context.md  planner-mvp-mode.md  planning-config.md  prohibition-probe.md  verification-patterns.md
.cursor/gsd-core/templates/: phase-prompt.md
.cursor/gsd-core/workflows/: add-backlog.md  add-phase.md  add-tests.md  add-todo.md  ai-integration-phase.md  audit-fix.md  audit-milestone.md  audit-uat.md  autonomous.md  check-todos.md  cleanup.md  code-review-fix.md  do.md  (+67 more)
.github/workflows/: ci.yml
.understand-anything/: .understandignore  fingerprints.json  meta.json
.understand-anything/.trash-1781982400/: assemble-review.json  assembled-graph.json  batch-1.json  batch-2.json  batch-3.json  batch-4.json  batch-5.json  batch-6.json  batches.json  fingerprint-input.json  layers.json  review.json  tour.json
data/: swebench_lite_v1_subset.jsonl
docs/: cli.md  notes.md  output.md  what-it-does.md
src/: cli.rs  doctor.rs  lib.rs  main.rs  report.rs  results.rs  runner.rs  sandbox.rs  stats.rs  swebench.rs
tests/: integration_tests.rs
(+67 files in other folders)
