[package]
name = "clawmark"
version = "0.1.0"
edition = "2021"
rust-version = "1.79"

[features]
integration = []

[dependencies]
clap = { version = "=4.5.20", features = ["derive", "env"] }
serde = { version = "=1.0.210", features = ["derive"] }
serde_json = "=1.0.128"
tempfile = "=3.10.1"
sha2 = "=0.10.8"
hex = "=0.4.3"

[lints.rust]
unsafe_code = "forbid"

[lints.clippy]
all = "warn"
pedantic = "warn"

[profile.release]
strip = true
lto = true
