[package]
name = "clawmark"
version = "0.1.0"
edition = "2021"
rust-version = "1.79"
description = "A local Rust CLI that A/B tests two CLAUDE.md files against a SWE-bench Lite smoke set."
license = "MIT"
repository = "https://github.com/emiliolugo/clawmark"
readme = "README.md"
keywords = ["swe-bench", "benchmark", "claude", "cli", "ab-testing"]
categories = ["command-line-utilities", "development-tools"]

[features]
integration = []

[dependencies]
clap = { version = "=4.5.20", features = ["derive", "env"] }
serde = { version = "=1.0.210", features = ["derive"] }
serde_json = "=1.0.128"
tempfile = "=3.10.1"
sha2 = "=0.10.8"
hex = "=0.4.3"
tokio = { version = "=1.40.0", features = ["rt-multi-thread", "sync"] }

[lints.rust]
unsafe_code = "forbid"

[lints.clippy]
all = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }
# clawmark is a CLI binary, not a public library API. Documenting every
# fallible fn's error conditions and marking every getter #[must_use] is
# noise here, so these two pedantic lints are allowed while the rest stay on.
missing_errors_doc = "allow"
must_use_candidate = "allow"

[profile.release]
strip = true
lto = true
